FIX: alignment issues

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -533,7 +533,7 @@
     .img-list {
       padding: 50px 0px;
       display: flex;
-      align-items: center;
+      // align-items: center;
       justify-content: center;
       flex-direction: column;
 
@@ -755,7 +755,7 @@
         font-size: 26px;
         line-height: 1.4;
         padding: 30px;
-        margin-top: 80px;
+        margin-top: 30px;
 
         @include mobile {
           font-size: 22px;
